---------------------------------------------------------------------------------------------------
Version: 0.69.88
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.69.87
Date: 2025-07-25
  Changes:
    - Reworded the planet briefing... again!
    - Another megabasing tip added
---------------------------------------------------------------------------------------------------
Version: 0.69.86
Date: 2025-07-23
  Changes:
    - Renamed Operation Crap Man, because that name sucked.
---------------------------------------------------------------------------------------------------
Version: 0.69.85
Date: 2025-07-23
  Changes:
    - Fixed fast replace group of long stack inserters.
    - New biofusion tech: +1 Cargo landing pad. This should aid with how limitted cargo landing pads are on Rubia in post game.
---------------------------------------------------------------------------------------------------
Version: 0.69.84
Date: 2025-07-17
  Changes:
    - Better long term fix for BZ-tin compatibility with a new rocket silo recipe.
---------------------------------------------------------------------------------------------------
Version: 0.69.83
Date: 2025-07-15
  Changes:
    - Fixed bug where trashsteroid shadows would permanently exist on your map.
    - Preparing for wind turbine UPS improvement.
    - Fixed incompat with BZTin messing with rocket silo recipe, leading to a softlock.
---------------------------------------------------------------------------------------------------
Version: 0.69.82
Date: 2025-07-13
  Changes:
    - Made some yeetibng recipes visible in factoriopedia to help new players.
    - Added tips and tricks section:
      ► Crapapult
      ► Rocketizer
      ► Craptonite wall
      ► Garbo grabber
    - Made nicer debug functions.
    - Trashsteroid speed now fluctuates (it was supposed to before)